<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_reminders_white_24dp"
            android:title="@string/title_reminders" />
        <item
            android:id="@+id/nav_medications"
            android:icon="@drawable/ic_medications_white_24dp"
            android:title="@string/title_medications" />
        <item
            android:id="@+id/nav_symptoms"
            android:icon="@drawable/ic_symptoms_white_24dp"
            android:title="@string/title_symptoms" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports_white_24dp"
            android:title="@string/title_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/title_settings" />
    </group>
</menu>