<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backGround"
    android:orientation="vertical"
    android:fitsSystemWindows="true">


    <ImageView
        android:layout_width="270dp"
        android:layout_height="240dp"
        android:layout_above="@+id/register_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="67dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="182dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:background="@color/accent"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_email"
        android:background="@color/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_dob"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:background="@color/accent"
        android:outlineAmbientShadowColor="@color/black"
        android:id="@+id/register_dob"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:hint="@string/register_dob"
        android:inputType="phone" />

    <EditText
        android:background="@color/accent"
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_passwordreenter"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <EditText
        android:background="@color/accent"
        android:id="@+id/register_passwordreenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:hint="@string/register_passwordreenter"
        android:inputType="textPassword" />

    <Button
        android:background="@color/colorSecondary"
        android:textColor="@color/accent"
        android:textSize="18sp"
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_passwordreenter"
        android:layout_alignEnd="@+id/register_passwordreenter"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="70dp"
        android:text="@string/register" />

</RelativeLayout>